2002-02-06  Roland McGrath  <roland@frob.com>

	* sysdeps/unix/sysv/linux/netinet/ip.h: Moved to ...
	* sysdeps/generic/netinet/ip.h: ... here, replacing old file.

2002-02-06  H.J. Lu  <hjl@gnu.org>

	* sysdeps/mips/elf/ldsodefs.h: Make sure the right <ldsodefs.h>
	is included.

2002-02-06  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/stat.h (struct stat): Add
	attribute((packed)) to counter stupid people misuing gcc options.
	(struct stat64): Likewise.

2002-02-05  Ulrich Drepper  <drepper@redhat.com>

	* elf/rtld.c (dl_main): Correct indentation.  Use bool as type for
	the variables which are used as booleans.

2002-02-06  Andreas Jaeger  <aj@suse.de>

	* include/libc-symbols.h (INTUSE): Renamed from INT.
	* elf/dl-deps.c: Change users.
	* sysdeps/generic/dl-sysdep.c: Likewise.
	* sysdeps/generic/dl-cache.c: Likewise.
	* elf/dl-reloc.c: Likewise.
	* elf/rtld.c: Likewise.
	* elf/dl-version.c: Likewise.
	* elf/dl-load.c: Likewise.
	* elf/dl-dst.h: Likewise.
	* elf/dl-init.c: Likewise.
	* elf/dl-error.c: Likewise.
	* elf/dl-fini.c: Likewise.
	* elf/dl-runtime.c: Likewise.
	* elf/do-lookup.h: Likewise.

	* stdio-common/_itoa.h: Undefine SPECIAL to avoid duplicate
	definition.
	* stdio-common/_itowa.h: Likewise.

2002-02-05  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-minimal.c: Define _itoa_lower_digits.

	* elf/dynamic-link.h (elf_get_dynamic_info): ld.so can have
	DT_FLAGS set.

	* elf/dl-load.c (_dl_map_object_from_fd): Prevent dynamically
	loading modules with the DF_STATIC_TLS flag set.
	* elf/dynamic-link.h (elf_get_dynamic_info): Initialize l_flags
	element.
	* include/link.h (struct link_map): Add l_flags field.
	* elf/elf.h (DF_STATIC_TLS): New definition.

	* dlfcn/Makefile: Add rules to build and run bug-dlopen1.
	* dlfcn/bug-dlopen1.c: New file.  By Bruno Haible.

	* elf/rtld.c (process_dl_debug): Correct printing help message.
	* elf/dl-misc.c (_dl_debug_vdprintf): Implement precision handling
	for %s.
