@@ -3,6 +3,14 @@
 	* sysdeps/unix/sysv/linux/netinet/ip.h: Moved to ...
 	* sysdeps/generic/netinet/ip.h: ... here, replacing old file.
 
+2002-01-05  Roland McGrath  <roland@frob.com>
+
+	* sysdeps/mach/configure.in: New file.
+	* sysdeps/mach/configure: New generated file.
+
+	* mach/Makefile (user-interfaces): Remove default_pager_helper.
+	It has never been used by anything.
+
 2002-02-06  H.J. Lu  <hjl@gnu.org>
 
 	* sysdeps/mips/elf/ldsodefs.h: Make sure the right <ldsodefs.h>
